--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ cryptography==45.0.3
 dateparser==1.2.1
 docker==7.1.0
 dotenv==0.9.9
+et_xmlfile==2.0.0
 exceptiongroup==1.3.0
 fastapi==0.115.12
 fsspec==2025.5.1
@@ -54,10 +55,13 @@ Markdown==3.8
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
+numpy==2.3.0
 oauthlib==3.2.2
+openpyxl==3.1.5
 opentelemetry-api==1.34.0
 orjson==3.10.18
 packaging==25.0
+pandas==2.3.0
 pathspec==0.12.1
 pendulum==3.1.0
 pluggy==1.6.0
@@ -66,6 +70,7 @@ prefect==3.4.5
 prometheus_client==0.22.1
 proto-plus==1.26.1
 protobuf==6.31.1
+pyarrow==20.0.0
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
 pycparser==2.22
